compleate hot gadgets website

--- a/index.html
+++ b/index.html
@@ -1,12 +1,269 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-   <meta charset="UTF-8">
-   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>hot-gadgets</title>
-</head>
-<body>
-   
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>hot-gadgets</title>
+
+    <!-- BOOTSTRAP CSS v5.1 LINK-->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
+      crossorigin="anonymous"
+    />
+
+    <!-- CSS LINK -->
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <!-- NAVBAR SECTION START -->
+    <section class="container">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#home">
+            <img src="logo.png" alt="" />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link active" href="#home">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Product</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link">Contact Us </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </section>
+    <!-- NAVBAR SECTION END -->
+
+    <!--  HEADER SECTION START -->
+    <section id="home" class="carousel-bg-left pb-5">
+      <div class="container">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+              aria-label="Slide 1"
+            ></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item carousel-bg active">
+              <div class="row py-5">
+                <div class="col-md-6 d-flex align-items-center">
+                  <div class="text-sm-center text-md-start">
+                    <h2>Mackbook Pro</h2>
+                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature.</p>
+                    <button>Buy Now -></button>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <img src="banner-products/slider-1.png" class="d-none d-md-block w-100" alt="imgage" />
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item carousel-bg">
+              <div class="row py-5">
+                <div class="col-md-6 d-flex align-items-center">
+                  <div class="text-sm-center text-md-start">
+                    <h2>Mackbook Pro</h2>
+                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature.</p>
+                    <button>Buy Now -></button>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <img src="banner-products/slider-3.png" class="d-none d-md-block w-100" alt="imgage" />
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item carousel-bg">
+              <div class="row py-5">
+                <div class="col-md-6 d-flex align-items-center">
+                  <div class="text-sm-center text-md-start">
+                    <h2>Mackbook Pro</h2>
+                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature.</p>
+                    <button>Buy Now -></button>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <img src="banner-products/product-1.png" class="d-none d-md-block w-100" alt="imgage" />
+                </div>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+    </section>
+    <!-- HEADER SECTION END -->
+
+    <!-- SMARTPHONE SECTION START -->
+    <section id="smartphone" class="container py-5 text-center">
+      <div class="d-flex justify-content-between pb-3">
+        <h3>Smartphone</h3>
+        <a href="inbex.html">See All</a>
+      </div>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100">
+            <img src="phone/phone-1.png" alt="phone" />
+            <div class="card-body">
+              <h4 class="py-4">iPhone 11 Pro</h4>
+              <p>Some quick example text to build on the card title.</p>
+              <h4>$999</h4>
+              <button>buy now -></button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="phone/phone-2.png" alt="phone" />
+            <div class="card-body">
+              <h4 class="py-4">iPhone 11 Pro</h4>
+              <p>Some quick example text to build on the card title.</p>
+              <h4>$799</h4>
+              <button>buy now -></button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="phone/phone-3.png" alt="phone" />
+            <div class="card-body">
+              <h4 class="py-4">Samsung Galaxy Note10+</h4>
+              <p>Some quick example text to build on the card title.</p>
+              <h4>$699</h4>
+              <button>Buy Now -></button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- SMARTPHONE SECTION END -->
+
+    <!-- LAPTOP SECTION START -->
+    <section id="laptop" class="container py-5 text-center">
+      <div class="d-flex justify-content-between pb-3">
+        <h3>Laptop</h3>
+        <a href="inbex.html">See All</a>
+      </div>
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100">
+            <img src="laptop/product-1.png" alt="laptop" />
+            <div class="card-body">
+              <h4 class="py-4">Asus VivoBook</h4>
+              <p>Some quick example text to build on the card title.</p>
+              <h4>$1999</h4>
+              <button>buy now -></button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="laptop/product-2.png" alt="laptop" />
+            <div class="card-body">
+              <h4 class="py-4">Razer Blade 15</h4>
+              <p>Some quick example text to build on the card title.</p>
+              <h4>$2799</h4>
+              <button>buy now -></button>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100">
+            <img src="laptop/product-3.png" alt="laptop" />
+            <div class="card-body">
+              <h4 class="py-4">Xiaomi Mi Notebook Pro</h4>
+              <p>Some quick example text to build on the card title.</p>
+              <h4>$1699</h4>
+              <button>Buy Now -></button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- LAPTOP SECTION END -->
+
+    <!-- CATEGORIES SECTION START -->
+    <section id="categories" class="container text-center py-5">
+      <div class="pb-5">
+        <h2 class="">Categories</h2>
+        <div class="categories-title"></div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-6">
+          <div class="row">
+            <div class="col-md-6 d-md-flex align-items-md-center justify-content-md-end">
+              <div class="categories-items-1">
+                <img class="img-fluid" src="Categories/bag.png" alt="" />
+                <h3>Bag</h3>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="categories-items-2">
+                <img class="img-fluid" src="Categories/perfume.png" alt="" />
+                <h3>Beauty</h3>
+              </div>
+              <div class="categories-items-3">
+                <img class="img-fluid" src="Categories/shoe.png" alt="" />
+                <h3>Shoes</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 pt-5">
+          <img class="img-fluid" src="Categories/pale-order.png" alt="" />
+        </div>
+      </div>
+    </section>
+    <!-- CATEGORIES SECTION END -->
+
+    <!-- FOOTER SECTION START -->
+    <footer class="container text-center">
+      <p>&copy; 2021 Hot-Gadgets <a href="https://www.linkedin.com/in/rashidul191/">Rashidul</a></p>
+    </footer>
+    <!-- FOOTER SECTION END -->
+    <!-- BOOTSTRAP JS v5.1 LINK -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
